syntax = "proto3";

package payment;

option go_package = "./;payment";

service PaymentService {
  rpc CreatePayment(CreatePaymentRequest) returns (PaymentResponse);
  rpc ListPayments(UserRequest) returns (PaymentListResponse);
}

message CreatePaymentRequest {
  string user_id = 1;
  int64 amount = 2;
  string salon_id = 3;
  string service_id = 4;
  string currency = 5;
  string payment_method = 6;
}

message UserRequest {
  string user_id = 1;
}

message PaymentResponse {
  string id = 1;
  string status = 2;
}

message PaymentListResponse {
  repeated Payment payments = 1;
}

message Payment {
  string id = 1;
  string user_id = 2;
  string salon_id = 3;
  string service_id = 4;
  int64 amount = 5;
  string currency = 6;
  string payment_method = 7;
  string status = 8;
  string created_at = 9;
}
